hybrid-overlay-ebpf/oncache-k8s/manifests/overlay-stress/policies-0000.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0000
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.1.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.1.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0001
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.2.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.2.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0002
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.3.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.3.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0003
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.4.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.4.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0004
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.5.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.5.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0005
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.6.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.6.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0006
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.7.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.7.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0007
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.8.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.8.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0008
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.9.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.9.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0009
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.10.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.10.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0010
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.11.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.11.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0011
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.12.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.12.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0012
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.13.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.13.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0013
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.14.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.14.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0014
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.15.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.15.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0015
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.16.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.16.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0016
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.17.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.17.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0017
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.18.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.18.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0018
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.19.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.19.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overlay-stress-0019
  namespace: default
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values: [netperf-server, netperf-client]
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - ipBlock:
        cidr: 10.20.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - from:
    - podSelector:
        matchLabels:
          app: netperf-client
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.20.1.0/24
    ports:
    - protocol: TCP
      port: 59999
  - to:
    - podSelector:
        matchLabels:
          app: netperf-client
  - to:
    - podSelector:
        matchLabels:
          app: netperf-server
    ports:
    - protocol: TCP
      port: 12865
